Refactoring to multi model maven project, Closes #1.